fix: 기존 포지션 저장 문제 수정
- 포지션 of가 예외를 던지는 문제 발생
- Optinal로 처리 후 null이면 빈값 저장